--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <header>
-        <h1>Light Finder 🌌</h1>
+        <h1>Dark Finder</h1>
     </header>
 
     <div id="controls" class="hidden">
